--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,22 @@
 
 body {
-    /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
-    /* --color1: hsla(349, 69%, 76%, 1);
+    https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
+    --color1: hsla(349, 69%, 76%, 1);
     --color2: hsla(207, 67%, 44%, 1);
     --color3: hsla(200, 61%, 56%, 1);
     --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
+    --color5: hsla(170, 28%, 95%, 1); 
 
-    /* --color1: hsla(45, 86%, 83%, 1);
+     --color1: hsla(45, 86%, 83%, 1);
     --color2: hsla(135, 65%, 98%, 1);
     --color3: hsla(315, 37%, 86%, 1);
     --color4: hsla(45, 73%, 98%, 1);
-    --color5: hsla(224, 40%, 79%, 1); */
+    --color5: hsla(224, 40%, 79%, 1); 
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
     --gutter: 30px;
-    --footer-height: 25px;
+   
     
     font-family: 'Titillium Web', sans-serif;
     background-color: var(--color2);
@@ -28,12 +28,24 @@ main {
     justify-content: center;
     align-items: center;
     margin-bottom: calc(var(--footer-height));
+   
+}
+
+.main-article {
+    width: 1300px;
+    background-color: blue;
+}
+article {
+    display: flex;
+    flex-direction: column;
+    max-width: 50%;
+    background-color: var(--color3);
 }
 
 section {
-    background-color: var(--color5);
-    width: 1000px;
-    max-width: 80%;
+    background-color: var(--color1);
+   
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,7 +54,7 @@ section {
     padding-bottom: var(--gutter);
     margin-top: var(--gutter);
     margin-bottom: var(--gutter);
-    border: solid 2px var(--color1);
+    border: solid 2px var(--color5);
 }
 
 header {
